// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberTile should add the right class and data attribute when selected 1`] = `
"    
    <button data-role=\\"number\\" data-number=\\"5\\" data-selected=\\"true\\" class=\\"number selected\\">
      5
    </button>  
  "
`;

exports[`NumberTile should render a list item and have the correct markup 1`] = `
"    
    <button data-role=\\"number\\" data-number=\\"5\\" data-selected=\\"false\\" class=\\"number\\">
      5
    </button>  
  "
`;
